--- a/style.css
+++ b/style.css
@@ -11,3 +11,20 @@ body{
     aspect-ratio: 35/4;
     padding: 0.4rem;
 }
+
+header{
+    display: flex;
+    width: 100%;
+    height: 50px;
+    background-color: #1b1b32;
+}
+
+h1{
+    color: #f1be32;
+    font-size: min(5vw, 1.5em);
+}
+
+nav > ul{
+    display: flex;
+    justify-content: space-evenly;
+}
