--- a/style.css
+++ b/style.css
@@ -24,7 +24,21 @@ h1{
     font-size: min(5vw, 1.5em);
 }
 
+nav{
+    width: 50%;
+    max-width: 300px;
+    height: 50px;
+}
+
 nav > ul{
     display: flex;
     justify-content: space-evenly;
+}
+
+h1,h2{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h2{
+    border-bottom: 4px solid #dfdfe2;
 }
