--- a/style.css
+++ b/style.css
@@ -66,3 +66,14 @@ nav li{
     padding: 0.2rem;
     display: block;
 }
+
+nav > ul > li:hover{
+    background-color: #dfdfe2;
+    color:#1b1b32;
+    cursor: pointer;
+}
+
+li > a{
+    color: inherit;
+    text-decoration: none;
+}
