--- a/style.css
+++ b/style.css
@@ -17,11 +17,20 @@ header{
     width: 100%;
     height: 50px;
     background-color: #1b1b32;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
+    position: fixed;
 }
 
 h1{
     color: #f1be32;
     font-size: min(5vw, 1.5em);
+    text-align: center;
+}
+
+main{
+    padding-top: 25px;
 }
 
 nav{
@@ -33,6 +42,7 @@ nav{
 nav > ul{
     display: flex;
     justify-content: space-evenly;
+    
 }
 
 h1,h2{
